# Qt6-CMake-QML

./: AppxManifest.xml.in  CMakeLists.txt  Disc.qml  Main.qml  README.md  main.cpp
